--- a/Path_to_AWS_Certified_Data_Analytics.ipynb
+++ b/Path_to_AWS_Certified_Data_Analytics.ipynb
@@ -438,13 +438,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"src/AWS_Analytics_Services.png\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<style type=\"text/css\">\n",
     "\ttable.tableizer-table {\n",
     "\t\tfont-size: 12px;\n",
@@ -478,7 +471,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<style type=\"text/css\">\n",
+    "\ttable.tableizer-table {\n",
+    "\t\tfont-size: 12px;\n",
+    "\t\tborder: 1px solid #CCC; \n",
+    "\t\tfont-family: Arial, Helvetica, sans-serif;\n",
+    "\t} \n",
+    "\t.tableizer-table td {\n",
+    "\t\tpadding: 4px;\n",
+    "\t\tmargin: 3px;\n",
+    "\t\tborder: 1px solid #CCC;\n",
+    "\t}\n",
+    "\t.tableizer-table th {\n",
+    "\t\tbackground-color: #104E8B; \n",
+    "\t\tcolor: #FFF;\n",
+    "\t\tfont-weight: bold;\n",
+    "\t}\n",
+    "</style>\n",
+    "<table class=\"tableizer-table\">\n",
+    "<thead><tr class=\"tableizer-firstrow\"><th></th><th>Ideal Patterns</th><th>Anti-Patterns</th></tr></thead><tbody>\n",
+    " <tr><td>Amazon Athena</td><td><div class=\"fr-view\"><ol><li><strong>Interactive ad hoc querying for weblogs</strong> – Athena is a good tool for interactive <strong>one-time SQL queries</strong> against data on Amazon S3. For example, you could use Athena to run a query on web and application logs to troubleshoot a performance issue. Athena integrates with Amazon QuickSight for easy visualization.</li><li><strong>Interactive Analytical Solutions with notebook-based solutions</strong> - Data scientists and Analysts are often concerned about managing the infrastructure behind big data platforms while running notebook-based solutions such as RStudio, Jupyter, and Zeppelin. Amazon Athena makes it easy to analyze data using standard SQL without the need to manage infrastructure.&nbsp;</li><li><strong>Analyze AWS service logs</strong>&nbsp; – AWS CloudTrail, Amazon CloudFront, Elastic Load Balancing and Amazon VPC flow logs can be analyzed with Athena. The logs allow you to investigate network traffic patterns and identify threats and risks across your Amazon VPC estate.</li><li><strong>Query staging data before loading into Amazon Redshift</strong> – You can stage your raw data in Amazon S3 before processing and loading it into Amazon Redshift, and then use Athena to query that data.</li></ol></div></td><td><div class=\"fr-view\"><ol><li><strong>Enterprise Reporting and Business Intelligence Workloads</strong> – <strong>Amazon Redshift is a better tool&nbsp;</strong>for Enterprise Reporting and Business Intelligence Workloads involving iceberg queries or cached data at the nodes. Data warehouses pull data from many sources, format and organize it, store it, and support complex, high speed queries that produce business reports. The query engine in Amazon Redshift has been optimized to perform especially well on data warehouse workloads.</li><li><strong>ETL Workloads</strong> – You should use <strong>Amazon EMR/AWS Glue</strong> if you are looking for an ETL tool to process extremely large datasets and analyze them with the latest big data processing frameworks such as Spark, Hadoop, Presto, or Hbase.</li><li><strong>RDBMS</strong> – Athena is not a relational/transactional database. It is not meant to be a replacement for SQL engines like MySQL.</li></ol></div></td></tr>\n",
+    " <tr><td>Amazon ES</td><td><div class=\"fr-view\"><ol><li><strong>Analyze activity logs</strong>, e.g., logs for customer facing applications or websites</li><li><strong>Analyze CloudWatch logs</strong></li><li><strong>Analyze product usage data</strong> coming from various services and systems</li><li><strong>Analyze social media sentiments</strong>, CRM data and find trends for your brand and products</li><li><strong>Analyze data stream updates from other AWS service</strong>s, e.g., Amazon Kinesis Data Streams and Amazon DynamoDB</li><li><strong>Provide customers a rich search</strong> and navigation experience.</li><li><strong>Usage monitoring</strong> for mobile applications</li></ol></div></td><td><div class=\"fr-view\"><ol><li><strong>Online transaction processing (OLTP)</strong> - Amazon ES is a real-time distributed search and analytics engine. There is no support for transactions or processing on data manipulation. If your requirement is for a fast transactional system, then a relational database system built on <strong>Amazon RDS</strong>, or a <strong>non-relational database</strong> offering functionality such as <strong>DynamoDB</strong>, is a better choice.</li><li><strong>Ad hoc data querying&nbsp;</strong>– While Amazon ES takes care of the operational overhead of building a highly scalable Elasticsearch cluster if running Ad hoc queries or one-off queries against your data set is your use-case, <strong>Amazon Athena is a better choice</strong>.</li></ol></div></td></tr>\n",
+    " <tr><td>Amazon EMR</td><td><div class=\"fr-view\"><p>Amazon EMR’s flexible framework <strong>reduces large processing problems</strong> and data sets into <strong>smaller jobs</strong> and <strong>distributes them&nbsp;</strong>across many compute nodes in a Hadoop cluster. This capability lends itself to many usage patterns with big data analytics including:</p><ol><li><strong>Log processing and analytics</strong></li><li><strong>Large extract, transform, and load</strong> (ETL) data movement</li><li><strong>Risk modeling</strong> and <strong>threat analytics</strong></li><li><strong>Ad targeting</strong> and <strong>clickstream analytics</strong></li><li><strong>Genomics</strong></li><li><strong>Predictive analytics</strong></li><li><strong>Ad hoc data mining</strong> and analytics</li></ol></div></td><td><div class=\"fr-view\"><ol><li><strong>Small data sets&nbsp;</strong>– Amazon EMR is <strong>built for massively parallel processing</strong>; if your data set is small enough to run quickly on a single machine, in a single thread, the added overhead to map and reduce jobs may not be worth it for small data sets that can easily be processed in memory on a single system.</li><li><strong>ACID transaction requirements</strong> – While there are ways to achieve ACID (atomicity, consistency, isolation, durability) or limited ACID on Hadoop, using another database, such as Amazon RDS or a relational database running on Amazon EC2 may be a better option for workloads with stringent requirements.</li></ol></div></td></tr>\n",
+    " <tr><td>Amazon Kinesis</td><td><div class=\"fr-view\"><ol><li><strong>Real-time data analytics</strong> – Kinesis Data Streams enables real-time data analytics on streaming data, such as analyzing <strong>website clickstream data</strong> and <strong>customer engagement</strong> analytics.</li><li><strong>Log and data feed intake and processing</strong> – With Kinesis Data Streams, you can have producers <strong>push data directly into an Amazon Kinesis data stream</strong>. For example, you can submit system and application logs to Kinesis Data Streams and access the stream for processing within seconds. This <strong>prevents the log data from being lost if the front-end or application server fails</strong>, and <strong>reduces local log storage</strong> on the source. Kinesis Data Streams provides <strong>accelerated data intake&nbsp;</strong>because you are not batching up the data on the servers before you submit it for intake.</li><li><strong>Real-time metrics and reporting</strong> – You can use data ingested into Kinesis Data Streams for extracting metrics and generating KPIs to power reports and dashboards at real-time speeds. This enables data-processing application logic to work on data as it is streaming in continuously, rather than wait for data batches to arrive.</li></ol></div></td><td><div class=\"fr-view\"><ol><li><strong>Small scale consistent throughput&nbsp;</strong>– Even though Kinesis Data Streams works for streaming data at 200 KB/sec or less, it is designed and optimized for<strong>&nbsp;larger data throughputs</strong>.</li><li><strong>Long-term data storage and analytics</strong> –Kinesis Data Streams is not suited for long-term data storage. By default, data is retained for 24 hours, and you can extend the retention period by up to 7 days. You can move any data that needs to be stored for longer than 7 days into another durable storage service such as Amazon S3, Amazon S3 Glacier, Amazon Redshift, or DynamoDB.</li></ol></div></td></tr>\n",
+    " <tr><td>Amazon Redshift</td><td><div class=\"fr-view\"><p>Amazon Redshift is ideal for<strong> online analytical processing (OLAP)</strong> using your existing business intelligence tools. Organizations are using Amazon Redshift to:</p><ol><li><strong>Analyze global sales data</strong> for multiple products</li><li>Store <strong>historical stock trade data</strong></li><li><strong>Analyze ad impressions</strong> and clicks</li><li><strong>Aggregate gaming data</strong></li><li><strong>Analyze social trends</strong></li><li><strong>Measure clinical quality</strong>, <strong>operation efficiency</strong>, and <strong>financial performance</strong> in health care</li></ol></div></td><td><div class=\"fr-view\"><ol><li><strong>Small data sets&nbsp;</strong>– Amazon Redshift is <strong>built for parallel processing across a cluster</strong>. If your data set is <strong>less than a hundred gigabytes</strong>, you are <strong>not going to get all the benefits</strong> that Amazon Redshift has to offer and <strong>Amazon RDS may be a better solution</strong>.</li><li><strong>On-line transaction processing (OLTP)</strong> – Amazon Redshift is<strong>&nbsp;designed for data warehouse workloads&nbsp;</strong>producing <strong>extremely fast and inexpensive analytic capabilities</strong>. If you require a fast transactional system, you may want to choose a traditional relational database system built on <strong>Amazon RDS</strong> or a Non-relational database offering, such as <strong>DynamoDB</strong>.</li></ol></div></td></tr>\n",
+    " <tr><td>Amazon QuickSight</td><td><div class=\"fr-view\"><p>Amazon QuickSight is an ideal Business Intelligence tool allowing end-users to create visualizations that provide insight into their data to help them make better business decisions. Use cases include:</p><ol><li>Quick <strong>interactive ad-hoc exploration&nbsp;</strong>and <strong>optimized visualization</strong> of data</li><li>Create and share <strong>dashboards and KPI’s</strong> to provide insight into your data</li><li>Create<strong>&nbsp;Stories&nbsp;</strong>which are <strong>guided tours through specific views of an analysis</strong> and allow you to share insights and collaborate with others. They are used to convey key points, a thought process, or the evolution of analysis for collaboration.</li><li><strong>Analyze and&nbsp;</strong><strong>visualize data coming from logs and stored in Amazon S3</strong></li><li><strong>Analyze and visualize data from on-premises databases</strong> like SQL Server, Oracle, PostgreSQL, and MySQL</li><li><strong>Analyze and visualize data in various AWS resources</strong>, e.g., Amazon RDS databases, Amazon Redshift, Amazon Athena, and Amazon S3.</li><li><strong>Analyze and visualize data in software as a service (SaaS) applications&nbsp;</strong>like Salesforce.</li><li><strong>Analyze and visualize data in data sources</strong> that can be connected to <strong>using JDBC/ODBC</strong> connection<strong>.</strong></li></ol></div></td><td><div class=\"fr-view\"><ol><li><strong>Highly formatted canned Reports</strong> – Amazon QuickSight is much more suited for ad hoc query, analysis and visualization of data. For highly formatted reports e.g. formatted financial statements consider using a different tool.</li><li><strong>ETL</strong> - While Amazon QuickSight can perform some transformations <strong>it is not a full-fledged ETL tool</strong>. AWS offers <strong>AWS Glue</strong>, which is a fully managed extract, transform, and load (ETL) service that makes it easy for customers to prepare and load their data for analytics.</li></ol></div></td></tr>\n",
+    " <tr><td>Amazon SageMaker</td><td><div class=\"fr-view\"><ol><li><strong>Enable applications to flag suspicious transactions</strong> – Build an ML model that predicts whether a new transaction is legitimate or fraudulent.</li><li><strong>Forecast product demand</strong> – Input historical order information to predict future order quantities.</li><li><strong>Personalize application content</strong> – Predict which items a user will be most interested in, and retrieve these predictions from your application in real-time.</li><li><strong>Predict user activity&nbsp;</strong>– Analyze user behavior to customize your website and provide a better user experience.</li><li><strong>Listen to social media</strong> – Ingest and analyze social media feeds that potentially impact business decisions.</li></ol></div></td><td><div class=\"fr-view\"><ol><li><strong>Very large data sets</strong> – Terabyte-scale ingestion of data is not currently supported. Using Amazon EMR to run Spark’s Machine Learning Library (MLlib) is a common tool for such a use case.</li><li>Cases, where you need full control over your ML environment,&nbsp;are not ideal for Amazon SageMaker since it is a managed service.</li></ol></div></td></tr>\n",
+    "</tbody></table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"src/AWS_Analytics_Services.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Amazon QuickSight visual types"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Cost\n",
+    "Amazon QuickSight has two different editions for pricing; standard edition and enterprise edition. Pricing is based on an annual subscription. Both standard and enterprise editions include SPICE (Super-fast, Parallel, and In-memory Calculation Engine) capacity, and you can get additional SPICE capacity for a monthly add on cost. Month to month billing options are available for both the editions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Performance\n",
+    "Amazon QuickSight is built with SPICE. Built from the ground up for the cloud, SPICE uses a combination of columnar storage, in-memory technologies enabled through the latest hardware innovations, and machine code generation to run interactive queries on large datasets and get rapid responses."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Durability and availability\n",
+    "SPICE automatically replicates data for high availability and enables Amazon QuickSight to scale to hundreds of thousands of users who can all simultaneously perform fast interactive analysis across a wide variety of AWS data sources."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Scalability and elasticity\n",
+    "QuickSight is a fully managed service that internally takes care of scaling to meet the demands of end-users. You can seamlessly grow your data from a few hundred megabytes to many terabytes of data without managing any infrastructure."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Interfaces\n",
+    "Amazon QuickSight can connect to a wide variety of data sources including flat files (CSV, TSV, CLF, ELF),  on-premises databases like SQL Server, MySQL, and PostgreSQL, and AWS data sources including Amazon RDS, Amazon Aurora, Amazon Redshift, Amazon Athena and Amazon S3, and SaaS applications like Salesforce. You can also export analyzes from a visual to a file with CSV format"
    ]
   },
   {
