EMR ecosystem tools

--- a/Path_to_AWS_Certified_Data_Analytics.ipynb
+++ b/Path_to_AWS_Certified_Data_Analytics.ipynb
@@ -359,7 +359,8 @@
    "source": [
     "##### Choosing a sort key in Amazon Redshift  \n",
     "\n",
-    "When you create a table, you can define one or more of its columns as sort keys. When data is initially loaded into the empty table, the rows are stored on disk in sorted order. Information about sort key columns is passed to the query planner, and the planner uses this information to construct plans that exploit the way that the data is sorted. You can specify either a compound or interleaved sort key."
+    "When you create a table, you can define one or more of its columns as sort keys. When data is initially loaded into the empty table, the rows are stored on disk in sorted order. Information about sort key columns is passed to the query planner, and the planner uses this information to construct plans that exploit the way that the data is sorted. You can specify either a compound or interleaved sort key.\n",
+    "<a href=\"https://docs.aws.amazon.com/redshift/latest/dg/t_Sorting_data.html\">Choosing sort keys</a>"
    ]
   },
   {
@@ -382,13 +383,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compression encodings"
+    "<h5>Vacuuming tables</h5>\n",
+    "<a href=\"https://docs.aws.amazon.com/redshift/latest/dg/t_Reclaiming_storage_space202.html\">Vacuum Command </a>\n",
+    "\n",
+    "\n",
+    "<h5>Evaluating the query plan</h5>\n",
+    "<a href=\"https://docs.aws.amazon.com/redshift/latest/dg/c_data_redistribution.html\">query plan</a>\n",
+    "\n",
+    "<h5>Workload Management (WLM)</h5>\n",
+    "<a href=\"https://docs.aws.amazon.com/redshift/latest/dg/cm-c-implementing-workload-management.html\">Implementing workload management</a>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Compression encodings\n",
     "<div class=\"fr-view\"><p>A compression encoding specifies the type of compression that is applied to a column of data values as rows are added to a table. Learn more about the different compression types: </p><ul><li><a href=\"https://docs.aws.amazon.com/redshift/latest/dg/c_Raw_encoding.html\" rel=\"noopener noreferrer\" target=\"_blank\" tabindex=\"0\" aria-hidden=\"false\">Raw Encoding:</a>Raw encoding is the default encoding for columns that are designated as sort keys and columns that are defined as BOOLEAN, REAL, or DOUBLE PRECISION data types. With raw encoding, data is stored in raw, uncompressed form. </li><li><a href=\"https://docs.aws.amazon.com/redshift/latest/dg/az64-encoding.html\" rel=\"noopener noreferrer\" target=\"_blank\" tabindex=\"0\" aria-hidden=\"false\">AZ64 Encoding:</a>AZ64 is Amazon's proprietary compression encoding algorithm designed to achieve a high compression ratio and improved query processing. At its core, the AZ64 algorithm compresses smaller groups of data values and uses single instruction, multiple data (SIMD) instructions for parallel processing. Use AZ64 to achieve significant storage savings and high performance for numeric, date, and time data types.</li><li><a href=\"https://docs.aws.amazon.com/redshift/latest/dg/c_Byte_dictionary_encoding.html\" rel=\"noopener noreferrer\" target=\"_blank\" tabindex=\"0\" aria-hidden=\"false\">Byte-Dictionary Encoding</a></li><li><a href=\"https://docs.aws.amazon.com/redshift/latest/dg/c_Delta_encoding.html\" rel=\"noopener noreferrer\" target=\"_blank\" tabindex=\"0\" aria-hidden=\"false\">Delta Encoding</a></li><li><a href=\"https://docs.aws.amazon.com/redshift/latest/dg/lzo-encoding.html\" rel=\"noopener noreferrer\" target=\"_blank\" tabindex=\"0\" aria-hidden=\"false\">LZO Encoding:</a> provides a very high compression ratio with good performance. LZO encoding works especially well for CHAR and VARCHAR columns that store very long character strings, especially free form text, such as product descriptions, user comments, or JSON strings.</li><li><a href=\"https://docs.aws.amazon.com/redshift/latest/dg/c_MostlyN_encoding.html\" rel=\"noopener noreferrer\" target=\"_blank\" tabindex=\"0\" aria-hidden=\"false\">Mostly Encoding</a></li><li><a href=\"https://docs.aws.amazon.com/redshift/latest/dg/c_Runlength_encoding.html\" rel=\"noopener noreferrer\" target=\"_blank\" tabindex=\"0\" aria-hidden=\"false\">Runlength Encoding</a></li><li><a href=\"https://docs.aws.amazon.com/redshift/latest/dg/c_Text255_encoding.html\" rel=\"noopener noreferrer\" target=\"_blank\" tabindex=\"0\" aria-hidden=\"false\">Text255 and Text32k Encodings</a></li><li><a href=\"https://docs.aws.amazon.com/redshift/latest/dg/zstd-encoding.html\" rel=\"noopener noreferrer\" target=\"_blank\" tabindex=\"0\" aria-hidden=\"false\">Zstandard Encoding</a></li></ul></div>"
    ]
   },
@@ -419,6 +429,116 @@
    "source": [
     "## Processing (24 %)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h5>Apache Hue</h5>\n",
+    "Hue is an open source SQL Assistant for Databases & Data Warehouses\n",
+    "\n",
+    "<h5>Apache Tez</h5>\n",
+    "The project is aimed at building an application framework which allows for a complex directed-acyclic-graph of tasks for processing data. It is currently built atop Apache Hadoop YARN.\n",
+    "\n",
+    "The 2 main design themes for Tez are:\n",
+    "\n",
+    "    Empowering end users by:\n",
+    "        Expressive dataflow definition APIs\n",
+    "        Flexible Input-Processor-Output runtime model\n",
+    "        Data type agnostic\n",
+    "        Simplifying deployment\n",
+    "    Execution Performance\n",
+    "        Performance gains over Map Reduce\n",
+    "        Optimal resource management\n",
+    "        Plan reconfiguration at runtime\n",
+    "        Dynamic physical data flow decisions\n",
+    "\n",
+    "By allowing projects like Apache Hive and Apache Pig to run a complex DAG of tasks, Tez can be used to process data, that earlier took multiple MR jobs, now in a single Tez job as shown below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -572,43 +692,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Kinesis, S3, Lambda, EMR, Glue, Athena, Redshift and Quicksight"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Redshift, EMR, and Kinesis because they test you on every detail"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Kinesis, S3, Lambda, EMR, Glue, Athena, Redshift and Quicksight\n",
+    "\n",
+    "Redshift, EMR, and Kinesis because they test you on every detail\n",
+    "\n",
     "Redshift, Athena, Glue, Kinesis, EMR and Quicksight"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Security (18%)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "There are five different encryption options available to encrypt your S3 objects, as follows:\n",
+    "<ul>\n",
+    "    <li>Server-side encryption with S3 managed keys (SSE-S3)</li>\n",
+    "    <li>Server-side encryption with KMS managed keys (SSE-KMS)</li>\n",
+    "    <li>Server-side encryption with customer-managed keys (SSE-C)</li>\n",
+    "    <li>Client-side encryption with KMS managed keys (CSE-KMS)</li>\n",
+    "    <li>Client-side encryption with customer-managed keys (CSE-C)</li>\n",
+    "</ul>\n",
+    "The difference between server-side and client-side encryption is fairly simple. With serverside encryption, the encryption algorithm and process is run from the server-side—in this\n",
+    "instance, within S3. Client-side encryption means that the encryption process is executed on\n",
+    "the client first before the data is sent to S3 for storage."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
